# pokemon

./: Cargo.toml
pokemons_file/: pokemons.json
src/: lib.rs  main.rs  pokemon.rs  pokemon_monstro.rs
src/pokemon/: eficiencia.rs
src/pokemon_monstro/poke/: efeitos.rs  eficiencia.rs
