[package]
name = "pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
futures = "0.3"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]